--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.35.0
-opencv-python-headless>=4.9.0.80
-numpy>=1.26.0,<2.0.0
-Pillow>=10.0.0
-ultralytics>=8.1.0
-mediapipe>=0.10.9
-gdown>=5.0.0
+streamlit==1.31.0
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+Pillow==10.2.0
+ultralytics==8.1.47
+mediapipe==0.10.9
+gdown==5.1.0
